--- a/agi_av_import_export/build.gradle
+++ b/agi_av_import_export/build.gradle
@@ -35,18 +35,26 @@ def pathToFederalFolder = Paths.get(pathToTempFolder, 'ch')
 def pathToGeobauFolder = Paths.get(pathToTempFolder, 'geobau')
 //def pathToUnzipFolder = Files.createTempDirectory("agiavimport-unzip_data-").toFile().getAbsolutePath()
 
-/*
-def s3Bucket = "ch.so.afu.grundwasserbewirtschaftung"
+def bucketNameCanton = "0.ch.so.agi.av.dm01avch24lv95d"
+def bucketNameFederal = "0.ch.so.agi.av.dm01avch24lv95d"
+def bucketNameGeobau = "0.ch.so.agi.av.dxfgeobau"
+
 if (gretlEnvironment == "test") {
-    s3Bucket += "-test"
+    bucketNameCanton += "-test"
+    bucketNameFederal += "-test"
+    bucketNameGeobau += "-test"
 } else if (gretlEnvironment == "integration") {
-    s3Bucket += "-int"
+    bucketNameCanton += "-int"
+    bucketNameFederal += "-int"
+    bucketNameGeobau += "-int"
 } else if (gretlEnvironment == "production") {
     // do nothing
 } else {
-    s3Bucket += "-test"
+    bucketNameCanton += "-dev"
+    bucketNameFederal += "-dev"
+    bucketNameGeobau += "-dev"
 }
-*/
+
 
 task downloadFiles(type: FtpDownload ){ 
     server = ftpServerInfogrips
@@ -54,9 +62,8 @@ task downloadFiles(type: FtpDownload ){
     password = ftpPwdInfogrips
     systemType = "WINDOWS"
     fileType = "BINARY"
-    //localDir = System.getProperty("java.io.tmpdir") + "/gretl-share/" 
-    //remoteDir = "/DM01AVSO24LV95/ITF/" 
     localDir = pathToTempFolder
+    //remoteDir = "\\dm01avso24lv95_2\\itf" 
     remoteDir = "\\dm01avso24lv95\\itf" 
     remoteFile = "*.zip" 
 
@@ -65,7 +72,15 @@ task downloadFiles(type: FtpDownload ){
     }       
 } 
 
-task unzipData(dependsOn: 'downloadFiles') {
+task uploadFiles(type: S3Upload, dependsOn: 'downloadFiles') {
+    accessKey = awsAccessKeyAgi
+    secretKey = awsSecretAccessKeyAgi
+    bucketName = bucketNameCanton
+    sourceFiles = fileTree(pathToTempFolder) { include "*.zip" }
+    acl = "PublicRead"
+}
+
+task unzipFiles(dependsOn: 'uploadFiles') {
     doLast {
         fileTree(pathToTempFolder).files.each { 
             String fileName = it
@@ -95,9 +110,15 @@ task createFederalFiles(type: Av2ch) {
     }
 }
 
-// TODO: Upload federal files
+task uploadFederalFiles(type: S3Upload, dependsOn: 'createFederalFiles') {
+    accessKey = awsAccessKeyAgi
+    secretKey = awsSecretAccessKeyAgi
+    bucketName = bucketNameFederal
+    sourceFiles = fileTree(pathToTempFolder) { include "*.zip" }
+    acl = "PublicRead"
+}
 
-task createDxfGeobauFiles(type: Av2geobau, dependsOn: 'createFederalFiles') {
+task createDxfGeobauFiles(type: Av2geobau, dependsOn: 'uploadFederalFiles') {
     itfFiles = fileTree(pathToFederalFolder) { include "*.itf" }
     dxfDirectory = file(pathToGeobauFolder)
     zip = true
@@ -107,7 +128,13 @@ task createDxfGeobauFiles(type: Av2geobau, dependsOn: 'createFederalFiles') {
     }
 }
 
-// TODO: Upload geobau files
+task uploadGeobauFiles(type: S3Upload, dependsOn: 'createGeobauFiles') {
+    accessKey = awsAccessKeyAgi
+    secretKey = awsSecretAccessKeyAgi
+    bucketName = bucketNameGeobau
+    sourceFiles = fileTree(pathToTempFolder) { include "*.zip" }
+    acl = "PublicRead"
+}
 
 //task importData(type: Ili2pgReplace, dependsOn: 'unzipData') {
 task importData(type: Ili2pgReplace) {
@@ -116,10 +143,6 @@ task importData(type: Ili2pgReplace) {
     dbschema = 'agi_dm01avso24'
     dataFile = fileTree(pathToUnzipFolder) { include '*.itf' }
     dataset = fileTree(pathToUnzipFolder) { include '*.itf' }
-    //dataset = fileTree(pathToUnzipFolder).matching { include "*.itf" }
-    //dataset = ["240100","240200"]
-    //dataFile = "/var/folders/5r/cn9700vd4s719l1555_2zcs80000gn/T/agiavimport-3802844963390050294/unzip_data/240100.ITF"
-    //dataset = "240100"
 
     disableValidation = true
 
@@ -127,3 +150,15 @@ task importData(type: Ili2pgReplace) {
         println "Data imported into db: " + dbUriEdit
     }
 }
+
+//TODO test!
+task deleteFtpFiles(type: FtpDelete) {
+    server = ftpServerInfogrips
+    user = ftpUserInfogrips
+    password = ftpPwdInfogrips
+    systemType = "WINDOWS"
+    remoteDir = "\\dm01avso24lv95\\itf"
+    remoteFile = fileTree(pathToTempFolder) { include '*.zip' } 
+    //remoteFile = "*.zip"
+}
+
